Fixed some more alignment

--- a/mss/mss.css
+++ b/mss/mss.css
@@ -38,6 +38,7 @@
 
 .mss-icon-box {
 	position: relative;
+	margin-top: 5px;
 }
 
 .mss-box {
@@ -114,6 +115,7 @@
 	position: relative;
 	border-radius: 24px;
 	text-align: center;
+	top:-3px;
 }
 
 .mss-channel-name {
@@ -135,7 +137,7 @@
 .mss-channel-icon {
 	width: 16px;
 	height: 16px;
-	margin-top: 1px;
+	margin-top: 2px;
 	margin-right: 2px;
 	float: right;
 	background-image: url('icons.png');
